- start to build the first simple version of the slider

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>ololol</title>
 </head>
 <body>
-  
+  <div id="slider" class="slider">
+    <div class="thumb"></div>
+  </div>
 </body>
 </html>
