- make slider work with mousedown on the base - add min, max and default value - create a tooltip for current value

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
   <title>ololol</title>
 </head>
 <body>
-  <div id="slider" class="slider">
-    <div class="thumb"></div>
+  <div class="container">
+    <div id="slider" class="slider">
+      <div class="thumb">
+        <div class="handle"></div>
+        <div class="tooltip"></div>
+      </div>
+    </div>
+    <div class="scale">
+      <span class="min"></span>
+      <span class="max"></span>
+    </div>
   </div>
 </body>
 </html>
