- add step functionality - add progress bar

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <div id="slider" class="slider">
+      <div class="progress-bar"></div>
       <div class="thumb">
         <div class="handle"></div>
         <div class="tooltip"></div>
